[BUGFIX] phone number on mobile

--- a/skin/frontend/mbootstrap/default/scss/_layout.scss
+++ b/skin/frontend/mbootstrap/default/scss/_layout.scss
@@ -254,7 +254,7 @@
             }
 
             .contacts {
-                padding-left: 150px;
+                padding-left: 100px;
             }
         }
 
